--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,8 @@ python_requires = >=3.7
 install_requires =
     kabbes_py_starter
     kabbes_dir_ops   
+    kabbes_client
+    kabbes_menu
 
 [options.packages.find]
 where = src
