--- a/user_config.json
+++ b/user_config.json
@@ -4,8 +4,10 @@
         "platform": "s3",
         "local_data_rel_dir": "Data",
         "remote_data_dir": "password_creator",
-        "aws_bkt": "jameskabbes-personal",
-        "aws_role_shorthand": "jameskabbes",
-        "template": "default"
+        "template": "default",
+        "platforms.s3":{
+            "aws_bkt": "jameskabbes-personal",
+            "aws_role_shorthand": "jameskabbes"
+        }
     }
 }
